2007-04-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-compute-multi-hops): Fix error in setting hop.

2007-04-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-message): Don't print "Error" in level 1, this
	is part of the message already.
	(tramp-error-with-buffer, tramp-action-yesno, tramp-action-yn):
	Let `enable-recursive-minibuffers' be t, in case we need
	`pop-to-buffer' during editing of the minibuffer.
	(tramp-barf-if-no-shell-prompt): Apply `tramp-error-with-buffer'.

2007-03-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (top): Don't require 'tramp-cache, it results in an
	endless loop.  Autoload needed functions instead of.  Declare
	needed gateway symbols, when tramp-gw cannot be loaded.
	(with-parsed-tramp-file-name): Simplify `edebug-form-spec'.
	(with-file-property, with-connection-property): New defmacros,
	moved from tramp-cache.  This was necessary, because macros cannot
	be autoloaded.
	(tramp-register-file-name-handler)
	(tramp-register-completion-file-name-handler): New defsubst,
	derived from `tramp-register-file-name-handlers'.  The split is
	necessary because Tramp's file name handlers must be registered at
	different startup places.

	* tramp-cache.el (with-file-property, with-connection-property):
	Move them to tramp.el.

2007-03-31  Joachim Schrod  <jschrod@acm.org>  (tiny change)

	* tramp.el (tramp-completion-mode): `last-input-event' may have no
	character approximation.

2007-03-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-expand-file-name): Don't apply
	`tramp-drop-volume-letter' for non-Tramp files.

2007-03-25  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in: Add gateway support.

	* tramp.el (top): Require tramp-gw conditionally only.
	(tramp-methods): Add port spec to "plink", "plink1" and "pscp"
	methods.

2007-03-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-make-auto-save-file-name): Apply