@@ -1,3 +1,10 @@
+2007-04-08  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-buffer-name, tramp-debug-buffer-name): We must
+	use `tramp-file-name-real-host', because for gateway methods the
+	default port will be expanded later on, which would tamper the
+	name.
+
 2007-04-06  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-compute-multi-hops): Fix error in setting hop.
